namespaces/istio-test/podinfo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-test
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: test.ingress.test
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway-test
            port:
              number: 80
